--- a/MyApplication/app/src/main/res/menu/main.xml
+++ b/MyApplication/app/src/main/res/menu/main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/new_game"
+    <item android:id="@+id/mnVoice"
         android:icon="@drawable/ic_keyboard_voice_black_24dp"
         android:title="Voice"
         app:showAsAction="ifRoom" />
